# houseofagents

./: Cargo.toml  README.md  install.sh
.claude/: CLAUDE.md
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml
src/: app.rs  config.rs  event.rs  headless.rs  main.rs  output.rs  post_run.rs  runtime_support.rs  tui.rs
src/execution/: mod.rs  multi.rs  pipeline.rs  relay.rs  solo.rs  swarm.rs  test_utils.rs
src/memory/: extraction.rs  recall.rs  store.rs  types.rs
src/provider/: anthropic.rs  cli.rs  gemini.rs  mod.rs  openai.rs
src/screen/: help.rs  home.rs  memory.rs  mod.rs  order.rs  pipeline.rs  prompt.rs  results.rs  running.rs
src/tui/: consolidation.rs  diagnostics.rs  execution.rs  input.rs  mod.rs  results.rs  resume.rs  setup_analysis.rs  tests.rs
