[package]
name = "houseofagents"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Multi-agent prompt runner with TUI"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "5"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util", "fs"] }
toml = "0.8"
rand = "0.9"
pulldown-cmark = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
