[package]
name = "houseofagents"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Multi-agent prompt runner with TUI"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "5"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util", "fs", "signal"] }
toml = "0.8"
pulldown-cmark = "0.10"
fastrand = "2"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true

[lints.clippy]
all = "warn"
